[package]
name = "bevy_ecs_rpc"
version = "0.1.0"
authors = ["Script User <dev@gudao.co>"]
edition = "2024"
description = "Bevy ECS RPC serialization"
license = "MIT"
repository = "https://github.com/gudao-co/bevy_ecs_rpc.git"

[dependencies]
bevy_ecs = "0.18"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.1"
